--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <section id="container">
 
     </section>
+    <footer>
+        <p>Desenvolvido pelos Alunos: Caio De Castro e Arthur Henrique</p>
+    </footer>
+    <script scr="main.js"></script>
+    <script scr="perguntas.js"></script>
 </body>
-<footer>
-    <p>Desenvolvido pelos Alunos: Caio De Castro e Arthur Henrique</p>
-</footer>
-<script scr="main.js"></script>
-<script scr="peguntas.js"></script>
 </html>
 
