--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <footer>
         <p>Desenvolvido pelos Alunos: Caio De Castro e Arthur Henrique</p>
     </footer>
-    <script scr="main.js"></script>
-    <script scr="perguntas.js"></script>
+    <script src="main.js"></script>
+    <script src="perguntas.js"></script>
 </body>
 </html>
 
